# rust_home

./: .gitignore  Cargo.toml  Rocket.toml
resources/: scripts.js  styles.css
src/: main.rs
src/templates/: 404.hbs  index.hbs
templates/: 404.hbs  admin_index.hbs  header_content.hbs  index.hbs  login.hbs  nav_side.hbs
